fix: prevent ArrayIndexOutOfBoundsException in suggest methods and add generator-website config